Added all the stuff I need.

--- a/.gitignore
+++ b/.gitignore
@@ -60,4 +60,4 @@ typings/
 /components/jquery
 /components/font-awesome
 /components/popper.js/
-!/components/popper.js/dist
+!/components/popper.js/dist/*
