--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+    "dependencies": {
+      "font-awesome": "https://github.com/FortAwesome/Font-Awesome.git#^4.7.0",
+      "bootstrap": "https://github.com/twbs/bootstrap.git#^3.3.7"
+    }
 }
