--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   },
   "devDependencies": {
     "browser-sync": "~2.18.8",
-    "gulp": "~3.9.1",
-    "gulp-sass": "^3.1.0"
+    "gulp": "~3.9.1"
   },
   "dependencies": {
     "bower": "^1.8.0",
